--- a/style.css
+++ b/style.css
@@ -1,270 +1,30 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
-* {
-	box-sizing: border-box;
-}
-
 body {
-	background-color: #000000;
-	color: rgba(255, 255, 255, 0.767);
-	display: flex;
-	font-family: 'Muli', sans-serif;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	padding: 8px;
-	min-height: 100vh;
+
+  background: #262626;
+
+  font-family: raleway;
+
+  color: rgb(255, 255, 255);
+
+  margin: 0;
+
 }
 
-p {
-	margin: 5px 0;
-}
-
-h2 {
-	margin: 25px 0 20px;
-	text-align: center;
-}
-
-input[type=checkbox] {
-	margin-right: 0;
-}
-
-.container {
-	 background: radial-gradient(ellipse farthest-corner at right bottom, #feda3794 0%, #fdb931a1 8%, #9f7928d5 30%, #8a6f2fcc 40%, transparent 80%),
-                radial-gradient(ellipse farthest-corner at left top, #ffffff77 0%, #ffffac9d 8%, #d1b46498 25%, #5d4a1fa9 62.5%, #5d4a1fe0 100%);
-	 box-shadow: 
-    12px 12px 16px 0 rgba(255, 255, 255, 0.3) inset,
-    -8px -8px 12px 0 rgba(0, 0, 0, .25) inset;
-    border-radius: 10%;
-	padding: 20px;
-	width: 350px;
-	max-width: 100%;
-    
-}
-
-.result-container {
-	background-color: rgba(0, 0, 0, 0.4);
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
-	position: relative;
-	font-size: 18px;
-	letter-spacing: 1px;
-	padding: 10px 10px;
-	height: 50px;
-	width: 100%;
-   
-}
-
-.result-container #result {
-  	word-wrap: break-word;
-	max-width: calc(80% - 20px);
-    
-    
-}
-
-.result-container .btn {
-	font-size: 20px;
-	position: absolute;
-	top: 5px;
-	right: 5px;
-	height: 40px;
-	width: 40px;
-}
-
-.btn {
-	border: none;
-	color: #fff;
-	cursor: pointer;
-	font-size: 16px;
-	padding: 8px 12px;
-	background-color: rgba(109, 109, 107, 0.4);
-    
-}
-
-.btn-large {
-	 display: flex;
+.signupfrm{
+   display: flex;
   justify-content: center;
   align-items: center;
-	width: 100%;
-   background-color: #3a3232;
-   margin-bottom: 30px;
-   
+  height: 100vh;
+  
 }
 
-.setting {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin: 20px 0;
-    margin-left: 18px;
-    margin-right: 10px;
-    
-}
-
-@media screen and (max-width: 400px) {
-	.result-container {
-		font-size: 14px;
-	}
-}
-
-/* SOCIAL PANEL CSS */
-.social-panel-container {
-	position: fixed;
-	right: 0;
-	bottom: 80px;
-	transform: translateX(100%);
-	transition: transform 0.4s ease-in-out;
-}
-
-.social-panel-container.visible {
-	transform: translateX(-10px);
-}
-
-.social-panel {	
-	background-color: #fff;
-	border-radius: 16px;
-	box-shadow: 0 16px 31px -17px rgba(0,31,97,0.6);
-	border: 5px solid #001F61;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	font-family: 'Muli';
-	position: relative;
-	height: 169px;	
-	width: 370px;
-	max-width: calc(100% - 10px);
-}
-
-.social-panel button.close-btn {
-	border: 0;
-	color: #97A5CE;
-	cursor: pointer;
-	font-size: 20px;
-	position: absolute;
-	top: 5px;
-	right: 5px;
-}
-
-.social-panel button.close-btn:focus {
-	outline: none;
-}
-
-.social-panel p {
-	background-color: #001F61;
-	border-radius: 0 0 10px 10px;
-	color: #fff;
-	font-size: 14px;
-	line-height: 18px;
-	padding: 2px 17px 6px;
-	position: absolute;
-	top: 0;
-	left: 50%;
-	margin: 0;
-	transform: translateX(-50%);
-	text-align: center;
-	width: 235px;
-}
-
-.social-panel p i {
-	margin: 0 5px;
-}
-
-.social-panel p a {
-	color: #FF7500;
-	text-decoration: none;
-}
-
-.social-panel h4 {
-	margin: 20px 0;
-	color: #97A5CE;	
-	font-family: 'Muli';	
-	font-size: 14px;	
-	line-height: 18px;
-	text-transform: uppercase;
-}
-
-.social-panel ul {
-	display: flex;
-	list-style-type: none;
-	padding: 0;
-	margin: 0;
-}
-
-.social-panel ul li {
-	margin: 0 10px;
-}
-
-.social-panel ul li a {
-	border: 1px solid #DCE1F2;
-	border-radius: 50%;
-	color: #001F61;
-	font-size: 20px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 50px;
-	width: 50px;
-	text-decoration: none;
-}
-
-.social-panel ul li a:hover {
-	border-color: #FF6A00;
-	box-shadow: 0 9px 12px -9px #FF6A00;
-}
-
-.floating-btn {
-	border-radius: 26.5px;
-	background-color: #001F61;
-	border: 1px solid #001F61;
-	box-shadow: 0 16px 22px -17px #03153B;
-	color: #fff;
-	cursor: pointer;
-	font-size: 16px;
-	line-height: 20px;
-	padding: 12px 20px;
-	position: fixed;
-	bottom: 20px;
-	right: 20px;
-	z-index: 999;
-}
-
-.floating-btn:hover {
-	background-color: #ffffff;
-	color: #001F61;
-}
-
-.floating-btn:focus {
-	outline: none;
-}
-
-.floating-text {
-	background-color: #001F61;
-	border-radius: 10px 10px 0 0;
-	color: #fff;
-	font-family: 'Muli';
-	padding: 7px 15px;
-	position: fixed;
-	bottom: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	text-align: center;
-	z-index: 998;
-}
-
-.floating-text a {
-	color: #FF7500;
-	text-decoration: none;
-}
-
-@media screen and (max-width: 480px) {
-
-	.social-panel-container.visible {
-		transform: translateX(0px);
-	}
-	
-	.floating-btn {
-		right: 10px;
-	}
+.form{
+    background-color:#292929;           
+    width: 100px;
+    border-radius: 8px;
+    padding: 20px 40px;
+    box-shadow:  38px 38px 56px #1e1e1e,
+    -25px -25px 38px #1e1e1e;
 }
