--- a/style.css
+++ b/style.css
@@ -12,19 +12,26 @@ body {
 
 }
 
-.signupfrm{
-   display: flex;
-  justify-content: center;
+h1{
+    margin-top: 10%;
+    display: flex;
+  flex-direction: column;
   align-items: center;
-  height: 100vh;
-  
+}
+.results {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.form{
-    background-color:#292929;           
-    width: 100px;
-    border-radius: 8px;
-    padding: 20px 40px;
-    box-shadow:  38px 38px 56px #1e1e1e,
-    -25px -25px 38px #1e1e1e;
+button {
+  margin-bottom: 10px;
+   margin-top: 3%;
+}
+
+
+h3{
+   display: flex;
+  flex-direction: column;
+  align-items: center; 
 }
